--- a/app/src/index.css
+++ b/app/src/index.css
@@ -7,7 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
-  background-color: #2b303a;
+  width: 100vw;
 }
 
 code {
